<resources>
    <string name="app_name">RemindMe Beta</string>
    <string name="add_reminder_name">Save Reminder</string>
    <string name="search_title">Search</string>
    <string name="close_title">Close</string>
    <string name="check_title">Check</string>

    <string name="menu_item_notification">Reminders</string>
    <string name="menu_item_bookmarks">Bookmarks</string>
    <string name="menu_item_history">History</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_about">About</string>

    <string name="menu_item_all">All</string>
    <string name="menu_item_ideas">IDEAS</string>
    <string name="menu_item_todo">TODO</string>
    <string name="menu_item_birthdays">BIRTHDAYS</string>
    <string name="menu_item_holidays">HOLIDAYS</string>

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>

    <string name="title_input_label">Title</string>
    <string name="reminder_type_input_label">Reminder Type</string>

    <string name="dialog_neutral">Cancel</string>
    <string name="dialog_negative">Delete</string>
    <string name="dialog_positive">Edit</string>

</resources>